--- a/src/component/Home/home.css
+++ b/src/component/Home/home.css
@@ -382,7 +382,7 @@ header {
 .line {
   width: 150px;
   height: 4px;
-  background: #fc036b;
+  background: #9575cd;
   margin: 10px auto;
   border-radius: 5px;
 }
