--- a/src/component/Home/home.css
+++ b/src/component/Home/home.css
@@ -351,7 +351,7 @@ body.dark{
 header {
   width: 100vw;
   height: 100vh;
-  background-image: url("../Home/img/bus.avif");
+  background-image: url();
   background-position: bottom;
   background-attachment: fixed;
   background-size: cover;
