--- a/src/component/Home/home.css
+++ b/src/component/Home/home.css
@@ -81,7 +81,7 @@ html {
 .explore {
   width: 100%;
   height: 100vh;
-  background-image: url();
+  background-image: url("./img/bus_quote.png");
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -126,11 +126,13 @@ html {
 }
 
 .explore-content p {
-  color: rgb(221, 221, 221);
+  color: white;
   max-width: 65ch;
   line-height: 1.5;
   text-align: left;
   padding: 0px 35px;
+  font-weight: bolder ;
+  font-size: 20px;
 }
 
 .explore-content .ctn {
@@ -313,6 +315,7 @@ body.dark{
   animation: animate 8s linear infinite;
   -webkit-background-clip: text;
   -webkit-text-fill-color: rgba(255, 255, 255, 0);
+  backdrop-filter: blur(3.5px);
 }
 
 @keyframes animate {
@@ -351,7 +354,7 @@ body.dark{
 header {
   width: 100vw;
   height: 100vh;
-  background-image: url();
+  background-image: url("./img/try.jpg");
   background-position: bottom;
   background-attachment: fixed;
   background-size: cover;
@@ -368,6 +371,7 @@ header {
   z-index: 1;
   padding: 4rem;
   margin-bottom: 150px;
+
  
 }
 
@@ -391,7 +395,7 @@ header {
   font-size: 7vmin;
   margin-top: 50px;
   margin-bottom: 30px;
-  
+  backdrop-filter: blur(3.5px);
 }
 
 @media (max-width: 768px) {
@@ -626,3 +630,4 @@ input[type=radio] {
     }
   }
   
+
