--- a/src/component/ContactUs/contact.css
+++ b/src/component/ContactUs/contact.css
@@ -9,10 +9,10 @@
     display: flex;
     font-family: var(--ff-roboto);
   }
-  
+/*   
   form {
     width: 50%;
-  }
+  } */
   
   .cbox {
     width: 45%;
